objdiff-core/tests/snapshots/arch_arm__trim_trailing_hword.snap
---
source: objdiff-core/tests/arch_arm.rs
expression: diff.instruction_rows
---
[
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 0,
                size: 2,
                opcode: 116,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 2,
                size: 2,
                opcode: 116,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 4,
                size: 2,
                opcode: 9,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
]
